gateway/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: blog-app
spec:
  parentRefs:
  - name: blog-app-gateway
    sectionName: http
  hostnames:
  - "blog-app.labstack"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
